Refactor project structure with updated simulator and predictor-ud code from master branch