@@ -1,5 +1,13 @@
 package hu.u_szeged.inf.fog.simulator.prediction.communication.launchers;
 
+import hu.u_szeged.inf.fog.simulator.demo.ScenarioBase;
+import hu.u_szeged.inf.fog.simulator.prediction.PredictionConfigurator;
+import hu.u_szeged.inf.fog.simulator.prediction.PredictionLogger;
+import hu.u_szeged.inf.fog.simulator.prediction.parser.JsonParser;
+import hu.u_szeged.inf.fog.simulator.prediction.settings.PairPredictionSettings;
+import hu.u_szeged.inf.fog.simulator.prediction.settings.SimulationSettings;
+import org.json.JSONObject;
+
 import java.io.File;
 
 /**
@@ -23,20 +31,61 @@ public class PredictorLauncher extends Launcher {
 
     @Override
     public Process openWindows() throws Exception {
-        String command =  String.format(String.format(
-               "C:/Windows/System32/cmd.exe /c cd %s & start python.exe main.py", getProjectLocation()));
-       
-        System.out.println("Command: " + command);
-            
-        return Runtime.getRuntime().exec(command);
+        for (var predictionSetting : SimulationSettings.get().getPredictionSettings()) {
+            String command = "cd /d " +
+                    getProjectLocation() +
+                    String.format(
+                            " && %s/venv/Scripts/python.exe %s/main.py %s",
+                            getProjectLocation(),
+                            getProjectLocation(),
+                            new JSONObject().put(
+                                    "predictor-settings",
+                                    JsonParser.toJson(predictionSetting, PairPredictionSettings.class)
+                            ).toString().replace("\"", "\\\"")
+                    );
+
+            ProcessBuilder pb = new ProcessBuilder("cmd.exe", "/c", command);
+            pb.redirectError(new File(String.format("%s\\prediction_error_logs.txt", ScenarioBase.resultDirectory)));
+
+            PredictionLogger.info("Predictor-opening", "Opening \"" + predictionSetting + "\" named predictor");
+            Process predictorProcess = pb.start();
+
+            PredictionConfigurator.addPredictorProcess(
+                    predictionSetting.getPredictorName(),
+                    predictorProcess
+            );
+        }
+
+        return null;
     }
 
     @Override
     public Process openLinux() throws Exception {
-        String command = String.format("gnome-terminal -- python3.10 %s/main.py", getProjectLocation());
+        for (var predictionSetting : SimulationSettings.get().getPredictionSettings()) {
+            String command = "cd /d " +
+                    getProjectLocation() +
+                    String.format(
+                            " && %s/venv/Scripts/python.exe %s/main.py %s",
+                            getProjectLocation(),
+                            getProjectLocation(),
+                            new JSONObject().put(
+                                    "predictor-settings",
+                                    JsonParser.toJson(predictionSetting, PairPredictionSettings.class)
+                            ).toString().replace("\"", "\\\"")
+                    );
 
-        System.out.println("Command: " + command);
-        
-        return Runtime.getRuntime().exec(command);
+            ProcessBuilder pb = new ProcessBuilder("bash", "-c", command);
+            pb.redirectError(new File(String.format("%s\\prediction_error_logs.txt", ScenarioBase.resultDirectory)));
+
+            PredictionLogger.info("Predictor-opening", "Opening \"" + predictionSetting + "\" named predictor");
+            Process predictorProcess = pb.start();
+
+            PredictionConfigurator.addPredictorProcess(
+                    predictionSetting.getPredictorName(),
+                    predictorProcess
+            );
+        }
+
+        return null;
     }
 }
